<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="airport.srl.org.airtraffic.flights.ShowFlights"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="60.0dip"
            android:layout_height="40.0dip"
            android:text="@string/flightNumber" />
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="70.0dip"
            android:layout_height="40.0dip"
            android:text="@string/airplane" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="40.0dip"
                android:text="@string/origin" />
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="40.0dip"
                android:text="@string/departure" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="80dp"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="40.0dip"
                android:text="@string/destination" />
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="40.0dip"
                android:text="@string/arrival" />
        </LinearLayout>
        <TextView
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:text="@string/status" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
