<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="airport.srl.org.airtraffic.airport.ShowAirports">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/airportCode"
            android:textColor="#000000"
            android:layout_weight="1" />
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/airportName"
            android:textColor="#000000"
            android:layout_weight="1" />

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/airportAddress"
            android:textColor="#000000"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ShowAirportsListView" />

</LinearLayout>