<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="airport.srl.org.airtraffic.airlines.ShowAirlines"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="40.0dp"
            android:text="@string/airlineCode"
            android:textColor="#000000"
            android:layout_weight="1" />
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="40.0dp"
            android:text="@string/airlineName"
            android:layout_weight="1" />

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="40.0dp"
            android:text="@string/airlineBase"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView" />


</LinearLayout>
