<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="airport.srl.org.airtraffic.airlines.AddAirline"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/airlineCode"
            android:padding="10dp"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="#000000" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/airlineCode"
            android:layout_weight="1"
            android:textSize="30sp"
            android:inputType="textCapCharacters" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/airlineName"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="#000000" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/airlineName"
            android:layout_weight="1"
            android:textSize="30sp"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/airlineBase"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="#000000" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/airlineBase"
            android:layout_weight="1"
            android:textSize="30sp"
            android:inputType="textCapCharacters" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewAirline"
        android:id="@+id/addNewAirport"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />


</LinearLayout>
